<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearSv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginSuperExtraSmall"
        android:layout_marginVertical="@dimen/marginMediumSmall"
        android:orientation="horizontal">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textAlignment="textStart"
            android:background="@drawable/searchview_background"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search" />

        <ImageView
            android:id="@+id/expand"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_chevron_down"
            android:contentDescription="@null" />
    </LinearLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/findRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/marginSmall"
        android:layout_marginHorizontal="@dimen/marginSuperExtraSmall"
        android:padding="@dimen/marginMediumSmall"
        android:background="@drawable/background_square"
        android:layout_below="@id/linearSv" >
        <RelativeLayout
            android:id="@+id/llFulltime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/fulltime"
                style="@style/labelSearch"
                android:text="@string/fulltime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/switchFulltime"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchFulltime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llFulltime"
            android:layout_alignParentStart="true"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/location"
                style="@style/labelSearch"
                android:text="@string/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginLarge"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_square"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/location"
                android:padding="@dimen/marginSmall"
                android:autofillHints="@null" />
        </RelativeLayout>

        <Button
            android:id="@+id/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applyFilter"
            android:layout_below="@id/llLocation"
            android:layout_marginTop="@dimen/marginSmall"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvJobs"
        android:layout_below="@id/findRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" />
</RelativeLayout>