<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:elevation="1dp"
        app:titleCentered="true"
        app:navigationIcon="@drawable/ic_chevron_left"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:scrollbars="none" >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/company"
                style="@style/labelTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/marginSuperExtraSmall"
                android:text="@string/company" />

            <LinearLayout
                android:id="@+id/companyLL"
                android:layout_below="@id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/marginSmall"
                android:layout_marginVertical="@dimen/marginMediumSmall"
                android:orientation="horizontal"
                android:background="@drawable/background_round"
                android:layout_marginHorizontal="@dimen/marginSuperExtraSmall"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop"
                        android:contentDescription="@null" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/companyName"
                        style="@style/labelTitle"
                        android:paddingVertical="@dimen/marginSuperExtraSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/location"
                        style="@style/labelBody"
                        android:textStyle="bold"
                        android:paddingVertical="@dimen/marginSuperExtraSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/website"
                        style="@style/labelBody"
                        android:paddingVertical="@dimen/marginSuperExtraSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/jobSpec"
                style="@style/labelTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/companyLL"
                android:layout_marginVertical="@dimen/marginMediumSmall"
                android:paddingHorizontal="@dimen/marginSuperExtraSmall"
                android:text="@string/jobSpec" />

            <LinearLayout
                android:id="@+id/jobSpecLL"
                android:layout_below="@id/jobSpec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/marginSmall"
                android:layout_marginHorizontal="@dimen/marginSuperExtraSmall"
                android:orientation="vertical"
                android:background="@drawable/background_round"
                android:baselineAligned="false">

                <TextView
                    style="@style/labelBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />
                <TextView
                    android:id="@+id/titleJob"
                    style="@style/labelBody"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/marginMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/labelBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fulltime" />
                <TextView
                    android:id="@+id/fulltimeJob"
                    style="@style/labelBody"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/marginMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/labelBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
                <TextView
                    android:id="@+id/descriptionJob"
                    style="@style/labelBody"
                    android:layout_marginBottom="@dimen/marginMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>